syntax = "proto3";

package auth_service;

option go_package = "gen/auth_service/golang";

import "google/api/annotations.proto";

message User {
    string id = 1;
    string login = 2;
    string password = 3;

    string name = 4;
    string email = 5;
    string phone = 6;

    string registration_timestamp = 7;
}

// Requests ----------------------------------

message LoginRequest {
    string login = 1;
    string password = 2;
}

message RefreshRequest {
    string refresh_token = 1;
}

message RegisterRequest {
    User usr = 1;
}

message GetUserDataRequest {
    string user_id = 1;
}

// Responses ---------------------------------

message LoginResponse {
    string access_token = 2;
    string refresh_token = 3;
}

message RefreshResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message RegisterResponse {
    string user_id = 1;
}

message GetUserDataResponse {
    User usr = 1;
}

// Service -----------------------------------

service Auth {
	rpc Login(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/v1/auth/login"
        };
    }
    rpc Refresh(RefreshRequest) returns (RefreshResponse) {
        option (google.api.http) = {
            post: "/v1/auth/refresh"
        };
    }
	rpc Register(RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/v1/auth/register"
            body: "usr"
        };
    }
    rpc GetUserData(GetUserDataRequest) returns (GetUserDataResponse) {
        option (google.api.http) = {
            get: "/v1/user/{user_id}"
        };
    }
}
